--- a/MongoDB_API_CRUD_HelloWorld/package.json
+++ b/MongoDB_API_CRUD_HelloWorld/package.json
@@ -10,21 +10,21 @@
     "restart": "rimraf dist && npm run start",
     "dev": "nodemon --exec npm run restart"
   },
-  "author": "jay",
+  "author": "cat",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.1",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
-    "express": "^4.18.1",
+    "express": "^4.18.2",
     "lodash": "^4.17.21",
     "mongodb": "^4.8.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.18.9",
-    "@babel/core": "^7.18.9",
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.0",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/preset-env": "^7.18.9",
-    "nodemon": "^2.0.19",
+    "@babel/preset-env": "^7.20.2",
+    "nodemon": "^2.0.21",
     "rimraf": "^3.0.2"
   }
 }
